@@ -18,7 +18,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 import static uk.gov.hmcts.reform.fpl.enums.cfv.ConfidentialLevel.CTSC;
@@ -286,7 +285,7 @@ public enum DocumentType {
             .map(c -> this.baseFieldNameResolver == null ? null : this.baseFieldNameResolver.apply(c))
             .filter(Objects::nonNull)
             .map(f -> removeNested(f))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public List<String> getFieldNames() {
@@ -312,9 +311,13 @@ public enum DocumentType {
     }
 
     public static DocumentType fromFieldName(String fieldName) {
-        return Arrays.stream(DocumentType.values())
-            .filter(dt -> dt.getFieldNames().contains(fieldName))
-            .findFirst().orElse(null);
+        try {
+            return DocumentType.valueOf(fieldName);
+        } catch (IllegalArgumentException ex) {
+            return Arrays.stream(DocumentType.values())
+                .filter(dt -> dt.getFieldNames().contains(fieldName))
+                .findFirst().orElse(null);
+        }
     }
 
     public static String toJsonFieldName(String fieldName) {
